# os-course

./: README.md
exam/: README.md
labs/01/: README.md
labs/02/: README.md
labs/02/samples/: CMakeLists.txt
labs/02/samples/bad_errno/: CMakeLists.txt  bad_errno.cpp
labs/02/samples/create_process_linux/: CMakeLists.txt  create_process_linux.cpp
labs/02/samples/create_process_windows/: CMakeLists.txt  create_process_windows.cpp
labs/02/samples/daemon/: CMakeLists.txt  daemon.cpp
labs/02/samples/daemon_min/: CMakeLists.txt  daemon_min.cpp
labs/02/samples/good_errno/: CMakeLists.txt  good_errno.cpp
labs/02/samples/pthreads/: CMakeLists.txt  pthreads.cpp
labs/02/samples/thread_local_access_bench/: CMakeLists.txt  thread_local_access_bench.cpp
labs/02/samples/win_threads/: CMakeLists.txt  win_threads.cpp
labs/03/: README.md
labs/04/: README.md
labs/05/: README.md  memory-manager.drawio
labs/06/: B+Tree.drawio  Picture Editor.drawio  README.md
labs/06/samples/: CMakeLists.txt
labs/06/samples/lib/: scope_guards.h
labs/06/samples/linux_file_mapping/: CMakeLists.txt  linux_file_mapping.cpp
labs/06/samples/windows_file_mapping/: CMakeLists.txt  windows_file_mapping.cpp
labs/07/: README.md
labs/07/samples/: CMakeLists.txt
labs/07/samples/hello_fuse/: CMakeLists.txt  README.md  hello_fuse.cpp
labs/08/: README.md
lectures/01/: Введение в ОС.pptx
lectures/02/: Основные концепции ОС.pptx
lectures/03/: Процессы.pptx
lectures/04/: Потоки.pptx
lectures/05/: Синхронизация и межпроцессная коммуникация.pptx
lectures/05/samples/: CMakeLists.txt
lectures/05/samples/atomic_thread_racing/: CMakeLists.txt  atomic_thread_racing.cpp  lib.cpp  lib.h
lectures/05/samples/binary_semaphore/: CMakeLists.txt  binary_semaphore.cpp
lectures/05/samples/fair_rwlock/: CMakeLists.txt  fair_rwlock.cpp
lectures/05/samples/mutex/: CMakeLists.txt  mutex.cpp
lectures/05/samples/peterson_lock/: CMakeLists.txt  lib.cpp  lib.h  peterson_lock.cpp
lectures/05/samples/peterson_lock_wrong/: CMakeLists.txt  lib.h
lectures/05/samples/peterson_lock_wrong_2/: CMakeLists.txt  lib.h
lectures/05/samples/producer_consumer_with_semaphores/: CMakeLists.txt  producer_consumer_with_semaphores.cpp
lectures/05/samples/shared_mutex/: CMakeLists.txt  shared_mutex.cpp
lectures/05/samples/thread_racing/: CMakeLists.txt  lib.cpp  lib.h  thread_racing.cpp
lectures/05/samples/tsl_lock/: CMakeLists.txt  tsl_lock.cpp
lectures/06/: Планирование.pptx
lectures/07/: Управление памятью.pptx
lectures/08/: Управление памятью на практике.pptx
lectures/09/: Файловые системы.pptx
lectures/09/samples/: CMakeLists.txt
lectures/09/samples/copyfile/: CMakeLists.txt  copyfile.cpp  copyfile.h
lectures/10/: Введение в компьютерные сети.pptx
lectures/12/: Динамические библиотеки.pptx
